[gd_scene load_steps=11 format=3 uid="uid://fr25sami5vhh"]

[ext_resource type="Script" path="res://Scripts/crab.gd" id="1_o0k88"]
[ext_resource type="Texture2D" uid="uid://dqa8s73fmtmel" path="res://Sprites/crab.png" id="2_87wx2"]
[ext_resource type="Texture2D" uid="uid://cx1tj7lnnxs4j" path="res://Sprites/crab walk 1.png" id="3_d7le4"]
[ext_resource type="Texture2D" uid="uid://2h74j642ar6p" path="res://Sprites/crab walk 2.png" id="4_3u002"]
[ext_resource type="Texture2D" uid="uid://b0x3b707pn15x" path="res://Sprites/crab walk 3.png" id="5_pqcn0"]
[ext_resource type="Texture2D" uid="uid://cp1o4sm0c2fi0" path="res://Sprites/crab walk 4.png" id="6_nkhyq"]

[sub_resource type="SpriteFrames" id="SpriteFrames_3qtct"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_87wx2")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_d7le4")
}, {
"duration": 1.0,
"texture": ExtResource("4_3u002")
}, {
"duration": 1.0,
"texture": ExtResource("5_pqcn0")
}, {
"duration": 1.0,
"texture": ExtResource("6_nkhyq")
}],
"loop": true,
"name": &"walk",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_45yra"]

[sub_resource type="CircleShape2D" id="CircleShape2D_klb7d"]
radius = 108.005

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6km0h"]
size = Vector2(25.7143, 25.7143)

[node name="crab" type="CharacterBody2D" groups=["Enemy"]]
scale = Vector2(0.7, 0.7)
collision_layer = 2
script = ExtResource("1_o0k88")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, 0)
sprite_frames = SubResource("SpriteFrames_3qtct")
animation = &"idle"
frame_progress = 0.937484

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_45yra")

[node name="detect" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detect"]
shape = SubResource("CircleShape2D_klb7d")

[node name="kill" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="kill"]
position = Vector2(-2.04359e-06, 2.85714)
shape = SubResource("RectangleShape2D_6km0h")

[connection signal="body_entered" from="detect" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="detect" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="kill" to="." method="_on_kill_body_entered"]
[connection signal="body_exited" from="kill" to="." method="_on_kill_body_exited"]
